--- a/payment-api/infra/src/main/resources/application.yml
+++ b/payment-api/infra/src/main/resources/application.yml
@@ -73,5 +73,7 @@ redis:
 # ADAPTERS
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+acceptance-test:
+  enabled: true
 commandhandler:
   enabled: true
