--- a/gradle/config/sonar.gradle
+++ b/gradle/config/sonar.gradle
@@ -19,7 +19,7 @@ sonarqube {
         property "sonar.scm.disabled", "true"
         property "sonar.coverage.exclusions","**/model/**,**/dto/**,**/entity/**,**/command/**,**/event/**," +
                 "**/*Configuration*,**/configuration/**,**/*Application*,**/*Properties*,**/*Fake*," +
-                "**/*Exception*,**/common/**,**/*Port*,**/*ContractTest*"
+                "**/*Exception*,**/common/**,**/*Port*,**/*ContractTest*,**/acceptance-test-suite/**,**/*Admin*"
 
     }
 }
