--- a/.github/workflows/payment-api.yml
+++ b/.github/workflows/payment-api.yml
@@ -71,3 +71,25 @@ jobs:
         with:
           name: payment-api-jar
           path: payment-api/build/libs
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          dockerfile: ./payment-api/Dockerfile
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: payment-api
+          push: true
+          tags: lemiorhan/hexagonaldemo-paymentapi:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
