--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -2,9 +2,13 @@ name: Sonar Analysis
 
 on:
   push:
+
     paths:
       - ticket-api/**
       - payment-api/**
+      - .github/workflows/sonar-analysis.yml
+      - gradle/config/sonar.gradle
+      - gradle/config/jacoco.gradle
     branches:
       - main
 
@@ -18,12 +22,16 @@ jobs:
       mysql:
         image: mysql
         env:
-          MYSQL_ROOT_PASSWORD: my-secret-pw
+          MYSQL_ROOT_PASSWORD: password
         ports:
           - 4306:3306
+        options: >-
+          --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 10
 
       redis:
         image: redis
+        env:
+          REDIS_PASSWORD: redisPassword
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -41,16 +49,24 @@ jobs:
       kafka:
         image: confluentinc/cp-kafka:latest
         ports:
-          - 29092:29092
+          - 9092:9092
         env:
           KAFKA_BROKER_ID: 1
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+          KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+          KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
+      - name: Mysql initialize
+        run: |
+          mysql -h 127.0.0.1 --port 4306 -u root -ppassword mysql < docs/ddl/0_initialize.sql
+          mysql -h 127.0.0.1 --port 4306 -u root -ppassword mysql < docs/ddl/1_schema.sql
+          mysql -h 127.0.0.1 --port 4306 -u root -ppassword mysql < docs/ddl/2_data.sql
 
       - name: Set Up Java 11
         uses: actions/setup-java@v1
@@ -73,4 +89,5 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew clean build jacocoTestReport sonarqube -PskipInfraSetup -Dorg.gradle.daemon=false --info
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew clean jacocoTestReport sonarqube -PskipInfraSetup -Dorg.gradle.daemon=false
