--- a/.github/workflows/acceptance-test.yml
+++ b/.github/workflows/acceptance-test.yml
@@ -57,18 +57,6 @@ jobs:
           KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
           KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
 
-      paymentapi:
-        image: lemiorhan/hexagonaldemo-paymentapi:latest
-        ports:
-          - 8090:8090
-
-      ticketapi:
-        image: lemiorhan/hexagonaldemo-ticketapi:latest
-        ports:
-          - 8094:8094
-        env:
-          PAYMENT_API_BASE_URL: 172.17.0.1
-
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -78,6 +66,17 @@ jobs:
           mysql -h 127.0.0.1 --port 3306 -u root -ppassword mysql < docs/ddl/0_initialize.sql
           mysql -h 127.0.0.1 --port 3306 -u root -ppassword mysql < docs/ddl/1_schema.sql
           mysql -h 127.0.0.1 --port 3306 -u root -ppassword mysql < docs/ddl/2_data.sql
+
+      - name: Create docker network
+        run: docker network create container-network
+
+      - name: Run payment api image
+        run: |
+          docker run --network="container-network" -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
+
+      - name: Run ticket api image
+        run: |
+          docker run --network="container-network" -d --name ticketapi -p 8094:8094 lemiorhan/hexagonaldemo-ticketapi:latest
 
       - name: Set Up Java 11
         uses: actions/setup-java@v1
