--- a/.github/workflows/acceptance-test.yml
+++ b/.github/workflows/acceptance-test.yml
@@ -71,9 +71,9 @@ jobs:
         run: |
           docker network create container-network
           echo "Container network created"
-          docker run --network="container-network" -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
+          docker run --network="host" -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
           echo "Payment api has started"
-          docker run --network="container-network" -d --name ticketapi -p 8094:8094 lemiorhan/hexagonaldemo-ticketapi:latest
+          docker run --network="host" -d --name ticketapi -p 8094:8094 lemiorhan/hexagonaldemo-ticketapi:latest
           echo "Ticket api has started"
           sleep 3
           echo "Running acceptance test has started"
