--- a/ticket-api/Dockerfile
+++ b/ticket-api/Dockerfile
@@ -3,4 +3,6 @@ LABEL maintainer=hexagonaldemo
 
 COPY build/libs/ticket-api.jar lib/ticket-api.jar
 
+EXPOSE 8094
+
 CMD ["-Djava.security.egd=file:/dev/./urandom", "-Dfile.encoding=UTF-8", "lib/ticket-api.jar"]
