--- a/.github/workflows/acceptance-test.yml
+++ b/.github/workflows/acceptance-test.yml
@@ -70,11 +70,13 @@ jobs:
       - name: Create API's And Run Tests
         run: |
           export PAYMENT_API_BASE_URL=paymentapi
-          docker network create container-network
-          echo "Container network created"
-          docker run --network="container-network" -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
+#          docker network create container-network
+#          echo "Container network created"
+#          docker run --network="host" -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
+          docker run -d --name paymentapi -p 8090:8090 lemiorhan/hexagonaldemo-paymentapi:latest
           echo "Payment api has started"
-          docker run --network="container-network" -d --name ticketapi -p 8094:8094 --link paymentapi lemiorhan/hexagonaldemo-ticketapi:latest
+#          docker run --network="host" -d --name ticketapi -p 8094:8094 --link paymentapi lemiorhan/hexagonaldemo-ticketapi:latest
+          docker run -d --name ticketapi -p 8094:8094 --link paymentapi lemiorhan/hexagonaldemo-ticketapi:latest
           echo "Ticket api has started"
           sleep 3
           echo "Running acceptance test has started"
