--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,18 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
+  paymentapi:
+    image: lemiorhan/hexagonaldemo-paymentapi:latest
+    ports:
+      - 8090:8090
+
+  ticketapi:
+    image: lemiorhan/hexagonaldemo-ticketapi:latest
+    ports:
+      - 8094:8094
+    environment:
+      PAYMENT_API_BASE_URL: paymentapi
+
 volumes:
   mysql_data:
     external:
