works with docker-compose on local

--- a/payment-api/infra/src/main/resources/application.yml
+++ b/payment-api/infra/src/main/resources/application.yml
@@ -65,6 +65,7 @@ server:
 redis:
   accountLockDuration: 10000
   password: redisPassword
+  hostname: ${REDIS_HOST:localhost}
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ADAPTERS
