--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,13 +41,31 @@ services:
     image: lemiorhan/hexagonaldemo-paymentapi:latest
     ports:
       - 8090:8090
+    depends_on:
+      - mysql
+      - kafka
+      - zookeeper
+    environment:
+      - DB_HOST=mysql
+      - KAFKA_BROKER_HOST=kafka
+      - REDIS_HOST=redis
+    restart: on-failure
 
   ticketapi:
     image: lemiorhan/hexagonaldemo-ticketapi:latest
     ports:
       - 8094:8094
+    depends_on:
+      - mysql
+      - kafka
+      - zookeeper
+      - paymentapi
     environment:
-      PAYMENT_API_BASE_URL: paymentapi
+      - DB_HOST=mysql
+      - KAFKA_BROKER_HOST=kafka
+      - PAYMENT_API_BASE_URL=paymentapi
+      - REDIS_HOST=redis
+    restart: on-failure
 
 volumes:
   mysql_data:
