changes 0.0 to localhos

--- a/.github/workflows/acceptance-test.yml
+++ b/.github/workflows/acceptance-test.yml
@@ -27,6 +27,7 @@ jobs:
           docker network create hexagonaldemo_network
           echo "network created"
           docker-compose -f docker-compose-ci.yml up -d
+          sleep 10
           echo "Running acceptance test has started"
           ./gradlew clean :acceptance-test-suite:cucumber -PskipInfraSetup -Dorg.gradle.daemon=false
           echo "Running acceptance test has finished"
