--- a/payment-api/infra/src/test/resources/application.yml
+++ b/payment-api/infra/src/test/resources/application.yml
@@ -67,6 +67,7 @@ server:
 redis:
   accountLockDuration: 10000
   password: redisPassword
+  hostname: ${REDIS_HOST:localhost}
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ADAPTERS
