adds additional tests

--- a/payment-api/infra/src/main/resources/application.yml
+++ b/payment-api/infra/src/main/resources/application.yml
@@ -71,7 +71,7 @@ redis:
 # ADAPTERS
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-acceptance-test:
+administration:
   enabled: true
 commandhandler:
   enabled: true
