--- a/ticket-api/infra/src/main/resources/application.yml
+++ b/ticket-api/infra/src/main/resources/application.yml
@@ -68,7 +68,7 @@ kafka:
 # ADAPTERS
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-acceptance-test:
+administration:
   enabled: true
 commandhandler:
   enabled: true
