changes the base path of generated contract tests

--- a/payment-api/infra/build.gradle
+++ b/payment-api/infra/build.gradle
@@ -41,9 +41,11 @@ dependencies {
 }
 
 tasks.processContractTestResources.dependsOn rootProject.tasks.findByPath('payment-api:infra:generateContractTests')
+tasks.compileTestJava.dependsOn rootProject.tasks.findByPath('payment-api:infra:generateContractTests')
 
 contracts {
-    generatedTestJavaSourcesDir = project.file("src/test/java/")
+    generatedTestJavaSourcesDir = project.file("${project.buildDir}/generated-test-sources/contractTest/java")
+    generatedTestResourcesDir = project.file("${project.buildDir}/generated-test-resources/contracts")
     basePackageForTests = 'com.hexagonaldemo.paymentapi.contract.generated'
     nameSuffixForTests = 'ContractTest'
     testFramework = TestFramework.JUNIT5
