--- a/payment-api/infra/src/main/resources/application.yml
+++ b/payment-api/infra/src/main/resources/application.yml
@@ -79,3 +79,11 @@ adapters:
   account:
     lock:
       enabled: true
+
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# LOGGING
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+logging:
+  level:
+    com.hexagonaldemo.paymentapi: DEBUG
