--- a/ticket-api/infra/src/main/resources/application.yml
+++ b/ticket-api/infra/src/main/resources/application.yml
@@ -81,3 +81,10 @@ adapters:
     paymentPath: /api/v1/payments
   account:
     enabled: true
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# LOGGING
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+logging:
+  level:
+    com.hexagonaldemo.ticketapi: DEBUG
