--- a/gradle/config/dependencies.gradle
+++ b/gradle/config/dependencies.gradle
@@ -4,6 +4,7 @@ ext {
     // ============ DEPENDENCIES ============
 
     version_slf4j = '1.7.30'
+    version_logback = '1.2.3'
     version_junit5 = '5.6.0'
     version_junit5_suite = '1.6.0'
     version_assertJ = '3.10.0'
@@ -55,6 +56,7 @@ ext {
 dependencies {
     implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: rootProject.version_slf4j
     implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: rootProject.version_slf4j
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: rootProject.version_logback
     implementation group: 'org.slf4j', name: 'slf4j-api', version: rootProject.version_slf4j
     implementation group: 'org.codehaus.groovy', name: 'groovy', version: rootProject.version_groovy
 
