--- a/.github/workflows/payment-api.yml
+++ b/.github/workflows/payment-api.yml
@@ -67,11 +67,7 @@ jobs:
         with:
           apikey: 2a0ad462-59bb-4c4d-9d43-ab3705aad4c8
           project_id: 68b8e211-fbee-4cc5-9794-34912c05452c
-          command: |
-            export MYSQL_ROOT_PASSWORD=my-secret-pw
-            export DB_HOST=127.0.0.1
-            echo "host:$DB_HOST"
-            ./gradlew verifierStubsJar :payment-api:build :payment-api:bootJar -PskipInfraSetup -Dorg.gradle.daemon=false --rerun-tasks
+          command: ./gradlew verifierStubsJar :payment-api:build :payment-api:bootJar -PskipInfraSetup -Dorg.gradle.daemon=false --rerun-tasks
 
       - name: Upload Jar File
         uses: actions/upload-artifact@v1
