--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,4 +52,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - name: Set Up Java 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Cache gradle dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+
+      - name: Build
+        run: ./gradlew verifierStubsJar :ticket-api:build :ticket-api:bootJar -PskipInfraSetup -Dorg.gradle.daemon=false --rerun-tasks
 
