--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       mysql:
         image: mysql
         env:
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: my-secret-pw
         ports:
           - 4306:3306
 
@@ -27,4 +27,4 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Init Database
-        run:  mysql -uroot -h127.0.0.1 --port 4306 -proot -e 'CREATE DATABASE IF NOT EXISTS db1;'
+        run:  mysql -uroot -h127.0.0.1 --port 4306 --password=my-secret-pw -proot -e 'CREATE DATABASE IF NOT EXISTS db1;'
