--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,12 @@ jobs:
     services:
 
       mysql:
-        image: mysql
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: my-secret-pw
         ports:
           - 4306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
 
