--- a/.github/workflows/ticket-api.yml
+++ b/.github/workflows/ticket-api.yml
@@ -11,16 +11,17 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     services:
 
       mysql:
-        image: mysql
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: my-secret-pw
         ports:
           - 4306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
         image: redis
@@ -49,6 +50,7 @@ jobs:
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
     steps:
+
       - name: Checkout
         uses: actions/checkout@v1
 
