testing github actions

--- a/payment-api/infra/src/test/resources/application.yml
+++ b/payment-api/infra/src/test/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:4306}/payment?createDatabaseIfNotExist=true&enabledTLSProtocols=TLSv1.2
     username: root
-    password: password
+    password: my-secret-pw
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       minimum-idle: 5
