--- a/.github/workflows/ticket-api.yml
+++ b/.github/workflows/ticket-api.yml
@@ -16,7 +16,7 @@ jobs:
     services:
 
       mysql:
-        image: mysql:5.7
+        image: mysql
         env:
           MYSQL_ROOT_PASSWORD: password
         ports:
