testing github actions

--- a/.github/workflows/ticket-api.yml
+++ b/.github/workflows/ticket-api.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     services:
 
@@ -21,7 +21,6 @@ jobs:
           MYSQL_ROOT_PASSWORD: password
         ports:
           - 4306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
         image: redis
